# learngl

./: .gitignore  meson.build
glad/: glad.c  glad.h
src/: main.c
